# django-wow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  Dockerfile  README.md  production.env  setup.cfg
Docker/postgres/: Dockerfile  db_base_postgres  db_init.sh  postfix
Docker/postoffice/: Dockerfile  docker-entrypoint.sh  main.txt  master.cf
Docker/postoffice/dovecot/: dovecot-dict-quota.conf  dovecot-sql.conf  dovecot.conf
Docker/postoffice/init/: dovecot  postfix
Docker/postoffice/postfix/: main.cf  main.tst
Docker/postoffice/postfix/sql/: pgsql_virtual_alias_domain_catchall_maps.cf  pgsql_virtual_alias_domain_mailbox_maps.cf  pgsql_virtual_alias_domain_maps.cf  pgsql_virtual_domains_maps.cf  pgsql_virtual_mailbox_maps.cf
Docker/postoffice/test/: pgsql_virtual_alias_domain_catchall_maps.cf  pgsql_virtual_alias_maps.cf  test.sh
Docker/static_site/: Dockerfile
Docker/webmail/: Dockerfile  index.html
k8s/: config_map.yaml  dynamic-deploy.yaml  ingress.yaml  namespaces.yaml  pod.yaml  postgres-deploy.yaml  postoffice.yaml  pv.yaml  rabbit.yaml  redis.yaml  secrets.yaml  static-deploy.yaml
requirements/: base.txt  local.txt  production.txt
src/django_wow/: celerybeat-schedule  docker-entrypoint.sh  initialize_db.py  manage.py  urls.py  wsgi.py
src/django_wow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/django_wow/apps/core/: admin.py  context_processors.py  forms.py  models.py  tasks.py  urls.py  views.py
src/django_wow/apps/forums/: models.py
src/django_wow/apps/users/: admin.py  (+6 more)
src/django_wow/django_wow/: celery.py
(+46 files in other folders)
