[metadata]
name = django_wow
description = Django Based WoW Guild Website
url = https://
author = David Couples
author_email = gahdania@gahd.io
license = GPL v3+
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
version = 2.1.0-a1

[options]
packages =
    django_wow
include_package_data = True
install_requires =
    dj-database-url==0.5.0
    Django==4.0.2
    psycopg2-binary==2.9.3
    python-decouple==3.4
    gunicorn==20.1.0
    sentry-sdk==1.1.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
django_wow = py.typed

[flake8]
max-line-length = 120
